<resources>
    <string name="app_name">Lesson5_homework</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address_required">Email address (required)</string>
    <string name="password_required">Password (required)</string>
    <string name="forgot_password"><a href="">Forgot password?</a></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="required_field">* required field</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="title">Title</string>
    <string name="walmart">Walmart#</string>
    <string name="item_description">Item Description:</string>
</resources>